<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Dark_Gray_Background"
    tools:context=".activities.FriendsActivity">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/requests_heading"
        android:textColor="@color/Lighter_Gray_Text"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/Dark_Gray_Background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_baseline_home_24"
        app:tint="@color/Light_Gray_Text_Background" />

    <ImageButton
        android:id="@+id/friendsButton"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Dark_Gray_Background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/homeButton"
        app:srcCompat="@drawable/ic_baseline_people_24"
        app:tint="@color/Lighter_Gray_Text" />

    <TextView
        android:id="@+id/following_list_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/lato_bold"
        android:text="Following"
        android:textSize="@dimen/list_title_text_size"
        app:layout_constraintStart_toStartOf="@+id/following_list"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <ImageButton
        android:id="@+id/new_follow_request_button"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/Dark_Gray_Background"
        app:layout_constraintBottom_toTopOf="@+id/following_list"
        app:layout_constraintEnd_toEndOf="@+id/following_list"
        app:srcCompat="@drawable/ic_baseline_add_24" />

    <com.baoyz.swipemenulistview.SwipeMenuListView
        android:id="@+id/following_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:divider="@android:color/transparent"
        android:dividerHeight="10.0sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/following_list_title" />

    <com.baoyz.swipemenulistview.SwipeMenuListView
        android:id="@+id/follow_requests_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/homeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        android:divider="@android:color/transparent"
        android:dividerHeight="10.0sp" />

    <TextView
        android:id="@+id/follow_requests_list_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/lato_bold"
        android:text="Follow Requests"
        android:textSize="@dimen/list_title_text_size"
        app:layout_constraintBottom_toTopOf="@+id/follow_requests_list"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.48" />

</androidx.constraintlayout.widget.ConstraintLayout>