...
    android:layout_margin="30dp"
    android:background="@drawable/rounded_box"
    android:backgroundTint="@color/Medium_Gray_Background"
    tools:context=".fragments.ViewEditHabitEventFragment">

    <EditText
        android:id="@+id/request_email"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@drawable/rounded_box"
        android:ems="10"
        android:fontFamily="@font/lato"
        android:gravity="center"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/confirmRequestButton"
        android:layout_width="47dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/Medium_Gray_Background"
        android:src="@drawable/ic_done"
...
