...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/homeButton"
        app:srcCompat="@drawable/ic_baseline_people_24"
        app:tint="@color/Light_Gray_Text_Background" />

    <ImageButton
        android:id="@+id/logoutButton"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:backgroundTint="@color/Dark_Gray_Background"
        app:layout_constraintStart_toStartOf="@+id/habit_list_all_button"
        app:layout_constraintTop_toTopOf="@+id/greeting"
        app:srcCompat="@drawable/ic_baseline_logout_24"
...
