...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:tint="@color/Lighter_Gray_Text" />

    <TextView
        android:id="@+id/title_with_name"
        android:layout_width="294dp"
        android:layout_height="29dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="User name"
        android:textColor="@color/white"
...
